2022-07-15

  * Town and City phase upgrades are now FAST and free
  * release v0.26.2

2022-07-04

  * release v0.26.1

2022-06-30

  * Increased capacity and gather rates are now the default (no upgrades needed)

2022-03-01

  * Update for 0ad engine v0.0.26
  * release v0.26.0