@@ -1,0 +1,26 @@
+{
+	"genericName": "Town Phase",
+	"description": "Advances from a small village to a bustling town, ready to expand rapidly. This is the Persian town phase, where stable training rates are decreased because of the 'Times of War' bonus.",
+	"cost": {
+		"food": 0,
+		"wood": 0
+	},
+	"requirements": {
+		"entity": {
+			"class": "Village",
+			"number": 5
+		}
+	},
+	"requirementsTooltip": "Requires five Village Structures.",
+	"supersedes": "phase_village",
+	"replaces": ["phase_town"],
+	"icon": "town_phase.png",
+	"researchTime": 1,
+	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit. Stable −10% batch training time.",
+	"modifications": [
+		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
+		{ "value": "Trainer/BatchTimeModifier", "add": -0.1, "affects": "Stable" },
+		{ "value": "TerritoryInfluence/Radius", "multiply": 1.3, "affects": "CivCentre" }
+	],
+	"soundComplete": "interface/alarm/alarm_phase.xml"
+}
