@@ -1,3 +1,7 @@
+2022-07-18
+
+  * athen and pers:free and fast town/city phase upgrade
+
 2022-07-15
 
   * Town and City phase upgrades are now FAST and free
